# peaty

./: .gitignore  devenv.nix  pyproject.toml
.github/workflows/: publish.yml
src/peach/: path.py
src/peaty/: __init__.py  cmd.py
src/peaty/types/: path.py  path.pyi  sh.py
tests/: test_command.py  test_path.py
